@@ -9,14 +9,14 @@ dnl
 dnl Version information
 m4_define([xfsm_version_major], [4])
 m4_define([xfsm_version_minor], [5])
-m4_define([xfsm_version_micro], [91])
+m4_define([xfsm_version_micro], [92])
 m4_define([xfsm_version_nano], [])
 m4_define([xfsm_version_build], [@REVISION@])
-m4_define([xfsm_version_tag], [svn])
+m4_define([xfsm_version_tag], [])
 m4_define([xfsm_version], [xfsm_version_major().xfsm_version_minor().xfsm_version_micro()ifelse(xfsm_version_nano(), [], [], [.xfsm_version_nano()])ifelse(xfsm_version_tag(), [svn], [xfsm_version_tag()[-r]xfsm_version_build()], [])])
 
 dnl Initialize autoconf
-AC_COPYRIGHT([Copyright (c) 2003-2007
+AC_COPYRIGHT([Copyright (c) 2003-2008
         The Xfce development team. All rights reserved.
         
 Written for Xfce by Benedikt Meurer <benny@xfce.org>.])
@@ -71,12 +71,12 @@ dnl Check for i18n support
 XDT_I18N([@LINGUAS@])
 
 dnl Check for required packages
-XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.5.91])
-XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.91])
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.5.92])
+XDT_CHECK_PACKAGE([LIBXFCEGUI4], [libxfcegui4-1.0], [4.5.92])
 XDT_CHECK_PACKAGE([LIBWNCK], [libwnck-1.0], [2.12])
 XDT_CHECK_PACKAGE([DBUS], [dbus-1], [1.0.0])
 XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [0.73])
-XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.5.91svn-r28290])
+XDT_CHECK_PACKAGE([XFCONF], [libxfconf-0], [4.5.92])
 XDT_CHECK_PACKAGE([LIBGLADE], [libglade-2.0], [2.0.0])
 
 dnl Check for gnome support
