@@ -18,10 +18,12 @@ xfce4-session/xfsm-compat-gnome.c
 xfce4-session/xfsm-compat-kde.c
 xfce4-session/xfsm-dns.c
 xfce4-session/xfsm-manager.c
+xfce4-session/xfsm-shutdown-helper.c
 xfce4-session/xfsm-splash-screen.c
 xfce4-session/xfsm-startup.c
 xfce4-tips/main.c
 xfce4-session-logout/main.c
+
 
 # files added by intltool-prepare.
 settings/xfce-session-settings.desktop.in
