@@ -1,10 +1,6 @@
-4.5.90.0
-=======
-
-- Hook up Help button in settings dialog.
-
 4.5.92
 ======
+- Hook up Help button in settings dialog.
 - Implement support for the RestartImmediately restart style hint.
 - Fix possible crash with uninitialised GError (bug 4202).
 - Link libxfsm against all required libs to avoid link-time errors
