@@ -1,3 +1,8 @@
+2008-11-14  Stephan Arts <stephan@xfce.org>
+
+	* NEWS, po/POTFILES.in, configure.ac.in: Update files for 4.6 beta2
+	  release
+
 2008-11-12	Brian Tarricone <bjt23@cornell.edu>
 
 	* settings/main.c: Hook up Help button.
